--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==0.11.1
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
+Flask-Testing==0.5.0
 gunicorn==19.6.0
 itsdangerous==0.24
 Jinja2==2.8
