Properly set export of FLASK_APP variable.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 source venv/bin/activate
-export FLASK_APP="app.py"
+export FLASK_APP=app.py
 export APP_SETTINGS="config.DevConfig"
 export DATABASE_URL="postgresql://localhost/web_time_analytics"
