--- a/wta_app/.env
+++ b/wta_app/.env
@@ -2,3 +2,4 @@ source venv/bin/activate
 export FLASK_APP=app.py
 export APP_SETTINGS="wta_app.config.DevConfig"
 export DATABASE_URL="postgresql://localhost/web_time_analytics"
+export PYTHONPATH="."
