--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==0.8.7
 click==6.6
 coverage==4.2
 Flask==0.11.1
+Flask-Cors==3.0.1
 Flask-Migrate==2.0.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.1
@@ -13,5 +14,6 @@ Mako==1.0.4
 MarkupSafe==0.23
 psycopg2==2.6.2
 python-editor==1.0.1
+six==1.10.0
 SQLAlchemy==1.0.14
-Werkzeug==0.11.10
+Werkzeug==0.11.11
