--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 source venv/bin/activate
-export APP_SETTINGS="wta_app.config.DevConfig"
-export DATABASE_URL="postgresql://localhost/web_time_analytics"
+export APP_SETTINGS="battleship.config.DevConfig"
+export DATABASE_URL="postgresql://localhost/verified_battleship"
 export PYTHONPATH="."
