Changed db name from verified_battleship to battleship.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 source venv/bin/activate
 export APP_SETTINGS="battleship.config.DevConfig"
-export DATABASE_URL="postgresql://localhost/verified_battleship"
+export DATABASE_URL="postgresql://localhost/battleship"
 export PYTHONPATH="."
